--- a/project001/index.html
+++ b/project001/index.html
@@ -1,5 +1,8 @@
 <?php include($_SERVER['DOCUMENT_ROOT']."/project001/template/header.html"); ?>
-<body>
-    <h1>test</h1>
-</body>
+<?php include($_SERVER['DOCUMENT_ROOT']."/project001/template/module/menu-module.html"); ?>
+<header>
+    <h1>header</h1>
+</header>
+<article>
+</article>
 <?php include($_SERVER['DOCUMENT_ROOT']."/project001/template/footer.html"); ?>
