--- a/project001/index.html
+++ b/project001/index.html
@@ -1,8 +1,18 @@
 <?php include($_SERVER['DOCUMENT_ROOT']."/project001/template/header.html"); ?>
+<main>
+<!-- left contents -->
+<div class="left-contents">
 <?php include($_SERVER['DOCUMENT_ROOT']."/project001/template/module/menu-module.html"); ?>
-<header>
-    <h1>header</h1>
-</header>
+</div>
+
+<!-- right contents -->
+<div class="right-contents">
+<?php include($_SERVER['DOCUMENT_ROOT']."/project001/template/module/header-module.html"); ?>
+
+<!-- contents area -->
 <article>
 </article>
+
+</div>
+</main>
 <?php include($_SERVER['DOCUMENT_ROOT']."/project001/template/footer.html"); ?>
