--- a/persbox/module/footer.html
+++ b/persbox/module/footer.html
@@ -7,7 +7,8 @@
         </nav>
     </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script type="text/javascript" src="<?php echo $directory_setting ?>js/"></script>
+<script type="text/javascript" src="<?php echo $directory_setting ?>js/header.js"></script>
+<script type="text/javascript" src="<?php echo $directory_setting ?>js/scroll.js"></script>
 <?php include($_SERVER['DOCUMENT_ROOT']."/persbox/module/tag_manager.html"); ?>
 </body>
 </html>
