--- a/persbox/index.html
+++ b/persbox/index.html
@@ -1,5 +1,5 @@
 <?php include($_SERVER['DOCUMENT_ROOT']."/persbox/module/head.html"); ?>
-
+<?php include($_SERVER['DOCUMENT_ROOT']."/persbox/module/pers-list.html"); ?>
     <header id="top-head">
         <div class="global-menu">
             <h1><a href="#key">Pers Box</a></h1>
@@ -7,9 +7,8 @@
                 <ul>
                     <li><a href="#who">WHO WE ARE</a>
                     <li><a href="#works">WORKS</a>
-                    <li><a href="#">SERVICES</a>
                     <li><a href="#company">COMPANY</a>
-                    <li><a href="#">CONTACT US</a>
+                    <li><a href="mailto:info@pers-box.jp">CONTACT US</a>
                 </ul>
             </nav>
         </div>
@@ -45,20 +44,92 @@
             <div class="works-text-area">
                 <h1>WORKS</h1>
             </div>
-            <div class="woriks-list-area">
+            <div class="works-list-area">
                 <ul>
-                    <li><a href="#">
-                        <figure>
-                            <img src="#">
-                        </figure>
-                    <li><a href="#">
-                        <figure>
-                            <img src="#">
-                        </figure>
-                    <li><a href="#">
-                        <figure>
-                            <img src="#">
-                        </figure>
+                    <li>
+                        <a>
+                            <figure id="img01">
+                                <img src="/persbox/img/pers/img01.jpg">
+                            </figure>
+                        </a>
+                    <li>
+                        <a>
+                            <figure id="img02">
+                                <img src="/persbox/img/pers/img03.jpg">
+                            </figure>
+                        </a>
+                    <li>
+                        <a>
+                            <figure id="img03">
+                                <img src="/persbox/img/pers/img03.jpg">
+                            </figure>
+                        </a>
+                </ul>
+                <ul>
+                    <li>
+                        <a>
+                            <figure id="img04">
+                                <img src="/persbox/img/pers/img01.jpg">
+                            </figure>
+                        </a>
+                    <li>
+                        <a>
+                            <figure id="img05">
+                                <img src="/persbox/img/pers/img01.jpg">
+                            </figure>
+                        </a>
+                    <li>
+                        <a>
+                            <figure id="img06">
+                                <img src="/persbox/img/pers/img03.jpg">
+                            </figure>
+                        </a>
+                    <li>
+                        <a>
+                            <figure id="img07">
+                                <img src="/persbox/img/pers/img01.jpg">
+                            </figure>
+                        </a>
+                    <li>
+                        <a>
+                            <figure id="img08">
+                                <img src="/persbox/img/pers/img01.jpg">
+                            </figure>
+                        </a>
+                </ul>
+                <ul>
+                    <li>
+                        <a>
+                            <figure id="img09">
+                                <img src="/persbox/img/pers/img01.jpg">
+                            </figure>
+                        </a>
+                    <li>
+                        <a>
+                            <figure id="img10">
+                                <img src="/persbox/img/pers/img03.jpg">
+                            </figure>
+                        </a>
+                </ul>
+                <ul>
+                    <li>
+                        <a>
+                            <figure id="img11">
+                                <img src="/persbox/img/pers/img01.jpg">
+                            </figure>
+                        </a>
+                    <li>
+                        <a>
+                            <figure id="img12">
+                                <img src="/persbox/img/pers/img03.jpg">
+                            </figure>
+                        </a>
+                    <li>
+                        <a>
+                            <figure id="img13">
+                                <img src="/persbox/img/pers/img03.jpg">
+                            </figure>
+                        </a>
                 </ul>
             </div>
         </div>
@@ -67,7 +138,77 @@
     <sectioin id="company" class="contents-company">
         <div class="company-inside">
             <div class="company-text-area">
-                <h1>COMPANY</h1>
+                <h1>CO<span class="under-line">MPA</span>NY</h1>
+            </div>
+            <div class="company-detail-area">
+                <ul>
+                    <li>
+                        <dl>
+                            <dt>会社名
+                            <dd>有限会社パースボックス
+                        </dl>
+                    <li>
+                        <dl>
+                            <dt>所在地
+                            <dd>
+                                <ul>
+                                    <li>〒104-0061 東京都中央区銀座1-14-6 銀座一丁目ビル 603号室
+                                    <li>〒103-0022 東京都中央区日本橋室町1-10-10 LXS室町 402号室
+                                </ul>
+                        </dl>
+                    <li>
+                        <dl>
+                            <dt>TEL
+                            <dd>03-3535-8808
+                        </dl>
+                    <li>
+                        <dl>
+                            <dt>代表取締役
+                            <dd>斉藤 勝己
+                        </dl>
+                    <li>
+                        <dl>
+                            <dt>設立
+                            <dd>1985年4月
+                        </dl>
+                    <li>
+                        <dl>
+                            <dt>資本金
+                            <dd>3,000,000円
+                        </dl>
+                    <li>
+                        <dl>
+                            <dt>取引銀行
+                            <dd>三井住友銀行　東京中央支店
+                        </dl>
+                    <li>
+                        <dl>
+                            <dt>事業内容
+                            <dd>完成予想図, 3Dパース, 手書きパース, 展示装飾デザイン
+                        </dl>
+                </ul>
+            </div>
+            
+            <div class="company-map-area">
+                <ul>
+                    <li>
+                        <ul>
+                            <li>104-0061
+                            <li>東京都中央区銀座1-14-6 銀座一丁目ビル 603号室
+                            <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.1604421823126!2d139.7675853152448!3d35.67305123802802!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188be1706a69a3%3A0xe05f8db0b6370278!2z44CSMTA0LTAwNjEg5p2x5Lqs6YO95Lit5aSu5Yy66YqA5bqn77yR5LiB55uu77yR77yU4oiS77yWIOmKgOW6p--8keS4geebruODk-ODqw!5e0!3m2!1sja!2sjp!4v1466378942371" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        </ul>
+                    <li>
+                        <ul>
+                            <li>103-0022
+                            <li>東京都中央区日本橋室町1-10-10 LXS室町 402号室
+                            <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.6625029816855!2d139.77332896524504!3d35.68531133735563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601889542ae0f3c1%3A0x4a64551c705669ae!2z44CSMTAzLTAwMjIg5p2x5Lqs6YO95Lit5aSu5Yy65pel5pys5qmL5a6k55S677yR5LiB55uu77yR77yQ4oiS77yR77yQIO-8rO-8uO-8s-WupOeUug!5e0!3m2!1sja!2sjp!4v1466379111842" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        </ul>
+                </ul>
+            </div>
+            <div class="action-button">
+                <a href="mailto:info@pers-box.jp">
+                    <p>CONTACT US</p>
+                </a>
             </div>
         </div>
     </sectioin>
