--- a/persbox/module/seo_setting.html
+++ b/persbox/module/seo_setting.html
@@ -8,7 +8,7 @@
     */
     
     // 共通タイトル設定
-    $common_title = "PersBox";
+    $common_title = "PersBox(パースボックス)";
 
     
     if($page_url == $company_home){
@@ -16,7 +16,7 @@
         //01
         $meta_title = "Your satisfaction is guaranteed. | $common_title";
         //02
-        $meta_keywords = "パースボックス,CGパース,手描きパース,建築パース,店舗パース,住宅インテリアパース,イベントパース,展示会パース,3Dモデリング";
+        $meta_keywords = "Pers Box,パースボックス,CGパース,手描きパース,建築パース,店舗パース,住宅インテリアパース,イベントパース,展示会パース,3Dモデリング";
         //03
         $meta_description = "PersBox（パースボックス）は、確かなテクニックとセンスを持ち合せたプロの技術集団です。ハイクオリティーなCGや手描きによる建築、店舗、住宅インテリア、イベント、展示会などのパースデザインを手掛けています。";
         //04
