--- a/persbox/module/footer.html
+++ b/persbox/module/footer.html
@@ -2,13 +2,14 @@
     <footer>
         <nav>
             <ul>
-                <li>
+                <li>Copyright &nbsp;&copy;&nbsp; 2007- Pers Box All Right Reserved.
             </ul>
         </nav>
     </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script type="text/javascript" src="<?php echo $directory_setting ?>js/header.js"></script>
 <script type="text/javascript" src="<?php echo $directory_setting ?>js/scroll.js"></script>
+<script type="text/javascript" src="<?php echo $directory_setting ?>js/lightbox.js"></script>
 <?php include($_SERVER['DOCUMENT_ROOT']."/persbox/module/tag_manager.html"); ?>
 </body>
 </html>
