pers box ver.1.20

--- a/persbox/index.html
+++ b/persbox/index.html
@@ -13,7 +13,7 @@
             </nav>
         </div>
     </header>
-    
+
     <sectioin id="key" class="key_visual">
         <div class="key_inside">
             <div class="key_title">
@@ -49,19 +49,19 @@
                     <li>
                         <a>
                             <figure id="img01">
-                                <img src="/persbox/img/pers/img01.jpg">
+                                <img src="/persbox/img/pers/pers01.png">
                             </figure>
                         </a>
                     <li>
                         <a>
                             <figure id="img02">
-                                <img src="/persbox/img/pers/img03.jpg">
+                                <img src="/persbox/img/pers/pers02.png">
                             </figure>
                         </a>
                     <li>
                         <a>
                             <figure id="img03">
-                                <img src="/persbox/img/pers/img03.jpg">
+                                <img src="/persbox/img/pers/pers03.png">
                             </figure>
                         </a>
                 </ul>
@@ -69,31 +69,31 @@
                     <li>
                         <a>
                             <figure id="img04">
-                                <img src="/persbox/img/pers/img01.jpg">
+                                <img src="/persbox/img/pers/pers04.png">
                             </figure>
                         </a>
                     <li>
                         <a>
                             <figure id="img05">
-                                <img src="/persbox/img/pers/img01.jpg">
+                                <img src="/persbox/img/pers/pers05.png">
                             </figure>
                         </a>
                     <li>
                         <a>
                             <figure id="img06">
-                                <img src="/persbox/img/pers/img03.jpg">
+                                <img src="/persbox/img/pers/pers06.png">
                             </figure>
                         </a>
                     <li>
                         <a>
                             <figure id="img07">
-                                <img src="/persbox/img/pers/img01.jpg">
+                                <img src="/persbox/img/pers/pers07.png">
                             </figure>
                         </a>
                     <li>
                         <a>
                             <figure id="img08">
-                                <img src="/persbox/img/pers/img01.jpg">
+                                <img src="/persbox/img/pers/pers08.png">
                             </figure>
                         </a>
                 </ul>
@@ -101,33 +101,27 @@
                     <li>
                         <a>
                             <figure id="img09">
-                                <img src="/persbox/img/pers/img01.jpg">
+                                <img src="/persbox/img/pers/pers09.png">
                             </figure>
                         </a>
                     <li>
                         <a>
                             <figure id="img10">
-                                <img src="/persbox/img/pers/img03.jpg">
+                                <img src="/persbox/img/pers/pers10.png">
                             </figure>
                         </a>
                 </ul>
                 <ul>
                     <li>
                         <a>
-                            <figure id="img11">
-                                <img src="/persbox/img/pers/img01.jpg">
-                            </figure>
-                        </a>
-                    <li>
-                        <a>
                             <figure id="img12">
-                                <img src="/persbox/img/pers/img03.jpg">
+                                <img src="/persbox/img/pers/pers12.png">
                             </figure>
                         </a>
                     <li>
                         <a>
                             <figure id="img13">
-                                <img src="/persbox/img/pers/img03.jpg">
+                                <img src="/persbox/img/pers/pers13.png">
                             </figure>
                         </a>
                 </ul>
