--- a/persbox/module/head.html
+++ b/persbox/module/head.html
@@ -14,3 +14,4 @@
 <link rel="stylesheet" href="<?php echo $directory_setting ?>css/module/style.css">
 </head>
 <body>
+<?php include($_SERVER['DOCUMENT_ROOT']."/persbox/module/page_up.html"); ?>
