--- a/persbox2/index.html
+++ b/persbox2/index.html
@@ -1,5 +1,5 @@
-<?php include($_SERVER['DOCUMENT_ROOT']."/persbox/module/head.html"); ?>
-<?php include($_SERVER['DOCUMENT_ROOT']."/persbox/module/pers-list.html"); ?>
+<?php include($_SERVER['DOCUMENT_ROOT']."/persbox2/module/head.html"); ?>
+<?php include($_SERVER['DOCUMENT_ROOT']."/persbox2/module/pers-list.html"); ?>
     <header id="top-head">
         <div class="global-menu">
             <h1><a href="#key">Pers Box</a></h1>
