--- a/persbox/index.html
+++ b/persbox/index.html
@@ -2,7 +2,7 @@
 <?php include($_SERVER['DOCUMENT_ROOT']."/persbox/module/pers-list.html"); ?>
     <header id="top-head">
         <div class="global-menu">
-            <h1><a href="#key">Pers Box</a></h1>
+            <h1><a href="#key"><figure></figure></a></h1>
             <nav>
                 <ul>
                     <li><a href="#who">WHO WE ARE</a>
@@ -17,8 +17,7 @@
     <sectioin id="key" class="key_visual">
         <div class="key_inside">
             <div class="key_title">
-                <h1>Pers Box</h1>
-                <h2>Your satisfaction is guaranteed.</h2>
+                <h1>Your satisfaction is guaranteed.</h1>
                 <p>私たちはハイクオリティーで、確かな技術をもったパースデザイン集団です。</p>
             </div>
             <div class="action-button">
