--- a/persbox/index.html
+++ b/persbox/index.html
@@ -150,6 +150,20 @@
                             </figure>
                         </a>
                 </ul>
+                <ul>
+                    <li>
+                        <a>
+                            <figure id="img17">
+                                <img src="/persbox/img/pers/pers14.png">
+                            </figure>
+                        </a>
+                    <li>
+                        <a>
+                            <figure id="img18">
+                                <img src="/persbox/img/pers/pers15.png">
+                            </figure>
+                        </a>
+                </ul>
             </div>
         </div>
     </sectioin>
@@ -183,7 +197,7 @@
                     <li>
                         <dl>
                             <dt>代表取締役
-                            <dd>斉藤 勝己
+                            <dd>齋藤 勝己
                         </dl>
                     <li>
                         <dl>
