--- a/persbox/module/pers-list.html
+++ b/persbox/module/pers-list.html
@@ -94,4 +94,16 @@
         </div>
 </div>
 
+<div id="lightbox-panel17">
+        <div id="lightbox-inside">
+            <fighre><img src="/persbox/img/pers/pers14.png"></fighre>
+        </div>
+</div>
+
+<div id="lightbox-panel18">
+        <div id="lightbox-inside">
+            <fighre><img src="/persbox/img/pers/pers15.png"></fighre>
+        </div>
+</div>
+
 <div id="BlackWindow"></div>
