--- a/persbox/index.html
+++ b/persbox/index.html
@@ -2,7 +2,7 @@
 <?php include($_SERVER['DOCUMENT_ROOT']."/persbox/module/pers-list.html"); ?>
     <header id="top-head">
         <div class="global-menu">
-            <h1><a href="#key">Pers Box</a></h1>
+            <h1><a href="#key"><figure></figure></a></h1>
             <nav>
                 <ul>
                     <li><a href="#who">WHO WE ARE</a>
@@ -17,8 +17,7 @@
     <sectioin id="key" class="key_visual">
         <div class="key_inside">
             <div class="key_title">
-                <h1>Pers Box</h1>
-                <h2>Your satisfaction is guaranteed.</h2>
+                <h1>Your satisfaction is guaranteed.</h1>
                 <p>私たちはハイクオリティーで、確かな技術をもったパースデザイン集団です。</p>
             </div>
             <div class="action-button">
@@ -151,6 +150,20 @@
                             </figure>
                         </a>
                 </ul>
+                <ul>
+                    <li>
+                        <a>
+                            <figure id="img17">
+                                <img src="/persbox/img/pers/pers14.png">
+                            </figure>
+                        </a>
+                    <li>
+                        <a>
+                            <figure id="img18">
+                                <img src="/persbox/img/pers/pers15.png">
+                            </figure>
+                        </a>
+                </ul>
             </div>
         </div>
     </sectioin>
@@ -184,7 +197,7 @@
                     <li>
                         <dl>
                             <dt>代表取締役
-                            <dd>斉藤 勝己
+                            <dd>齋藤 勝己
                         </dl>
                     <li>
                         <dl>
